<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_root"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkGray"
    tools:context="com.hash.cotinum.view.fragments.LoginFragment">

    <TextView
        android:id="@+id/text_login"
        style="@style/textSizeHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/string_login"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_mobile_email"
        style="@style/textSizeEditTextLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/string_mobile_number_email"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_login" />

    <EditText
        android:id="@+id/edit_phone_email"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/edittext_background"
        style="@style/textStyle"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:nextFocusDown="@id/text_forgot_password"
        android:padding="5dp"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_mobile_email" />

    <TextView
        android:id="@+id/text_password"
        style="@style/textSizeEditTextLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:text="@string/string_password"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_phone_email" />

    <TextView
        android:id="@+id/text_forgot_password"
        style="@style/textSizeEditTextLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:nextFocusDown="@id/edit_password"
        android:focusable="true"
        android:text="@string/string_forgot_password"
        android:textColor="@drawable/text_highlight"
        app:layout_constraintEnd_toEndOf="@id/edit_password"
        app:layout_constraintTop_toBottomOf="@id/edit_phone_email" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/edittext_background"
        style="@style/textStyle"
        android:inputType="textPassword"
        android:maxLines="1"
        android:nextFocusDown="@id/button_login"
        android:padding="5dp"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_password" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/button_background"
        style="@style/textStyle"
        android:nextFocusDown="@id/linear_facebook"
        android:text="@string/string_login"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_password" />

    <TextView
        android:id="@+id/text_or"
        style="@style/textSizeEditTextLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/string_or"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@id/button_login"
        app:layout_constraintStart_toStartOf="@id/button_login"
        app:layout_constraintTop_toBottomOf="@id/button_login" />

    <LinearLayout
        android:id="@+id/linear_facebook"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:focusable="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background_facebook"
        android:nextFocusDown="@id/linear_google"
        app:layout_constraintEnd_toEndOf="@id/button_login"
        app:layout_constraintStart_toStartOf="@id/button_login"
        app:layout_constraintTop_toBottomOf="@id/text_or">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/string_continue_with_facebook"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_google"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:focusable="true"
        android:background="@drawable/button_background"
        android:nextFocusDown="@id/button_create_account"
        app:layout_constraintEnd_toEndOf="@id/button_login"
        app:layout_constraintStart_toStartOf="@id/button_login"
        app:layout_constraintTop_toBottomOf="@id/linear_facebook">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/string_sign_in_with_google"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:textStyle="normal" />
    </LinearLayout>

    <Button
        android:id="@+id/button_create_account"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_background_black"
        style="@style/textStyle"
        android:text="@string/string_create_new_account"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>