<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkGray"
    tools:context="com.hash.cotinum.view.fragments.RegistrationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_signup_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_login"
            style="@style/textSizeHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_create_new_account"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_name"
            style="@style/textSizeEditTextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/string_name"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_login" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:maxLines="1"
            style="@style/textStyle"
            android:background="@drawable/edittext_background"
            android:padding="5dp"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_name" />

        <TextView
            android:id="@+id/text_mobile_email"
            style="@style/textSizeEditTextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:text="@string/string_mobile_number_email"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_name" />

        <EditText
            android:id="@+id/edit_phone_email"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:maxLines="1"
            style="@style/textStyle"
            android:background="@drawable/edittext_background"
            android:padding="5dp"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_mobile_email" />

        <TextView
            android:id="@+id/text_password"
            style="@style/textSizeEditTextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:text="@string/string_password"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_phone_email" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="25dp"
            android:maxLines="1"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/edittext_background"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            style="@style/textStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_password" />

        <TextView
            android:id="@+id/text_confirm_password"
            style="@style/textSizeEditTextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:text="@string/string_confirm_password"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_password" />

        <EditText
            android:id="@+id/edit_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:maxLines="1"
            style="@style/textStyle"
            android:background="@drawable/edittext_background"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_confirm_password" />

        <Button
            android:id="@+id/button_signup"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/button_background"
            style="@style/textStyle"
            android:text="@string/string_signup"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_confirm_password" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/text_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_back"
        style="@style/textStyle"
        android:textSize="12sp"
        android:textColor="@drawable/text_highlight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint_signup_form" />
</androidx.constraintlayout.widget.ConstraintLayout>