<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkGray"
    tools:context="com.hash.cotinum.view.fragments.RegistrationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_signup_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_device"
            style="@style/textSizeHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_enter_device_name"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_device_id"
            style="@style/textSizeEditTextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Device - XERUQ75E"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_device" />

        <TextView
            android:id="@+id/text_device_name"
            style="@style/textSizeEditTextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/string_device_name"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_device_id" />

        <EditText
            android:id="@+id/edit_device_name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/edittext_background"
            android:padding="5dp"
            android:maxLines="1"
            android:nextFocusDown="@id/button_save"
            style="@style/textStyle"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_device_name" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/button_background"
            style="@style/textStyle"
            android:text="@string/string_save"
            android:nextFocusDown="@id/text_back"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_device_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/text_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_back"
        style="@style/textStyle"
        android:textColor="@drawable/text_highlight"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint_signup_form" />
</androidx.constraintlayout.widget.ConstraintLayout>